k8s/ai-service-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service
  namespace: sentientgate
  labels:
    app: ai-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-service
  template:
    metadata:
      labels:
        app: ai-service
    spec:
      containers:
        - name: ai-service
          image: shrihari7396/ai-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: sentientgate
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: ai-service
