k8s/eureka-server-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: sentientgate
  labels:
    app: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: shrihari7396/eureka-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: sentientgate
spec:
  ports:
    - port: 8761
      targetPort: 8761
  selector:
    app: eureka-server
