k8s/kafka-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: sentientgate
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.7.1
          ports:
            - name: broker
              containerPort: 9092
            - name: controller
              containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: sentientgate
spec:
  ports:
    - name: broker
      port: 9092
      targetPort: 9092
  selector:
    app: kafka
