k8s/kafka-ui-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: sentientgate
  labels:
    app: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: sentientgate
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: kafka-ui
