k8s/logging-service-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logging-service
  namespace: sentientgate
  labels:
    app: logging-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logging-service
  template:
    metadata:
      labels:
        app: logging-service
    spec:
      containers:
        - name: logging-service
          image: shrihari7396/logging-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: grpc
              containerPort: 9090
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: logging-service
  namespace: sentientgate
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: grpc
      port: 9090
      targetPort: 9090
  selector:
    app: logging-service
