k8s/mcp-server-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-server
  namespace: sentientgate
  labels:
    app: mcp-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mcp-server
  template:
    metadata:
      labels:
        app: mcp-server
    spec:
      containers:
        - name: mcp-server
          image: shrihari7396/mcp-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /mcp-service/actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /mcp-service/actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mcp-server
  namespace: sentientgate
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: mcp-server
