k8s/redis-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: sentientgate
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.4
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: sentientgate
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
