k8s/sentinel-ui-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentinel-ui
  namespace: sentientgate
  labels:
    app: sentinel-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentinel-ui
  template:
    metadata:
      labels:
        app: sentinel-ui
    spec:
      containers:
        - name: sentinel-ui
          image: shrihari7396/sentinel-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: sentinel-ui
  namespace: sentientgate
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: sentinel-ui
